[package]
name = "solana-buyer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.10.0"
solana-client = "1.10.0"
eyre = "0.6.12"
solana-transaction-status = "1.18.5"
solana-account-decoder = "1.18.5"
spl-token-client = "0.8.0"
tokio = "1.36.0"
spl-token = "4.0.0"
lazy_static = "1.4.0"
borsh = "1.3.1"
arrayref = "0.3.7"
raydium-contract-instructions = { git = "http://github.com/raydium-io/raydium-contract-instructions.git", rev = "8710befa6d900a15b03a2fadb8a7caa0a91cfbdb" }
spl-associated-token-account = "2.3.0"
clap = { version = "4.5.2", features = ["derive"] }
solana-pubsub-client = "1.18.6"
serde = "1.0.197"
envy = "0.4.2"
dotenvy = "0.15.7"
crossbeam = "0.8.4"
url = "2.5.0"
tungstenite = {version = "0.21.0", features = ["native-tls"]}
serde_json = "1.0.114"
