[package]
name = "solana-buyer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Solana
borsh = { version = "1.3.1", default-features = false }

solana-account-decoder = { version = "1.18.5", default-features = false }
solana-client = { version = "1.10.0", default-features = false }
solana-rpc-client = { version = "1.17.15", default-features = false }
solana-sdk = { version = "1.10.0", default-features = false }
solana-transaction-status = { version = "1.18.5", default-features = false }

spl-associated-token-account = { version = "2.3.0", default-features = false }
spl-token = { version = "4.0.0", default-features = false }

# Raydium
raydium-contract-instructions = { git = "http://github.com/raydium-io/raydium-contract-instructions.git", rev = "8710befa6d900a15b03a2fadb8a7caa0a91cfbdb", default-features = false }

# Other
arrayref = { version = "0.3.7", default-features = false }
async-trait = { version = "0.1", default-features = false }
clap = { version = "4.5.2", features = ["derive"] }
coerce = { version = "0.8", default-features = false }
crossbeam = { version = "0.8.4", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
envy = { version = "0.4.2", default-features = false }
eyre = { version = "0.6.12" }
lazy_static = { version = "1.4.0", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114", default-features = false }
tokio = { version = "1.36.0", default-features = false }
tracing = { version = "0.1", default-features = false, features = [
  "attributes",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = { version = "0.21.0", features = ["native-tls"] }
url = { version = "2.5.0", default-features = false }
